edition = "2023";

import "google/protobuf/empty.proto";

package gophkeeper;

option go_package = "gophkeeper/gen;gophkeeper";

// TODO: переименовать
message AuthorizationRequest {
  string login = 1;
  string password = 2;
}

service AuthorizationService {
  rpc Authorize(AuthorizationRequest) returns (google.protobuf.Empty);
  rpc Register(AuthorizationRequest) returns (google.protobuf.Empty);
}